@@ -12,6 +12,7 @@ if (JavaVersion.current().isJava9Compatible()) {
     '--illegal-access=warn',
     '--add-opens=java.base/java.lang=ALL-UNNAMED',
     '--add-opens=java.base/java.lang.invoke=ALL-UNNAMED',
+    '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED',
     '--add-opens=java.base/java.io=ALL-UNNAMED',
     '--add-opens=java.base/java.net=ALL-UNNAMED',
     '--add-opens=java.base/java.nio=ALL-UNNAMED',
